# dep_graph

./: .env  .gitignore  DepGraph.pptx  README.md  action.yml  app.py  churn.py  cli.py  graph.py  parsers.py  pyproject.toml  render.yaml  requirements.txt
.cache/jb/: compilation_graph.txt  index_stats.txt  modules_graph.txt
.github/workflows/: depgraph.yml
.junie/memory/: feedback.md  language.json
examples/: dependency_graph.mmd
shared/: constants.json
static/: analysis.js  app.js  constants.js  exports.js  graph-core.js  graph-engine.js  index.html  layers.js  manifest.json  simulation.js  state.js  story.js  style.css  timeline.js  tools.js  tour.js  ui.js  views.js
static/__tests__/: analysis.test.js  exports.test.js  helpers.js  jsdom-shim.js  query.test.js
test_csharp/Models/: Order.cs  User.cs
test_csharp/Utils/: Helpers.cs
test_files/: utils.h
test_go/handlers/: user.go
test_js/components/: Header.tsx
test_py/: config.py
test_ruby/models/: user.rb
test_ruby/utils/: helpers.rb
test_rust/: main.rs
test_swift/Services/: OrderService.swift
tests/: conftest.py  test_app_server.py  test_churn.py  test_cli.py  test_cli_formatters.py  test_graph_edge_cases.py  test_graph_engine.py  test_integration.py  test_lua_zig_haskell_r_integration.py  test_lua_zig_haskell_r_regex.py  test_lua_zig_haskell_r_resolvers.py  test_new_languages_integration.py  test_new_languages_regex.py  test_new_languages_resolvers.py  test_parser_regex.py  test_parsers_edge_cases.py  test_resolvers.py
tests/test_cs_hyphen/: Main.cs
tests/test_csharp/: Program.cs
tests/test_files/: main.c  utils.c
tests/test_go/: main.go
vscode-extension/: .vscodeignore  LICENSE  LICENSE.md  README.md  package-lock.json  package.json  sync-engine.sh  tsconfig.json
(+1916 files in other folders)
