[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "depgraph"
version = "1.0.0"
description = "Visualize and analyze source file dependencies"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Harrison"}]

dependencies = [
    "flask>=3.0",
    "werkzeug>=3.0",
]

[project.optional-dependencies]
server = ["gunicorn>=21.0"]

[project.scripts]
depgraph = "cli:main"

[tool.setuptools]
py-modules = ["app", "cli", "graph", "parsers"]

[tool.setuptools.package-data]
"*" = ["static/**/*", "templates/**/*"]
